--- a/JS/age defining task/index.html
+++ b/JS/age defining task/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>3_task_Age_Check</title>
+    <title>Age defining</title>
 </head>
 <body>
     <script src="script.js"></script>
