--- a/JS/calculator task/index.html
+++ b/JS/calculator task/index.html
@@ -6,6 +6,7 @@
     <title>Calculator</title>
 </head>
 <body>
+    <h1>The coolest calculator ever</h1>
     <script src="script.js"></script>
 </body>
 </html>
