--- a/JS/1_task/index.html
+++ b/JS/1_task/index.html
@@ -7,7 +7,7 @@
     <title>JS first task</title>
 </head>
 <body>
-    <h1>Hello world!</h1>
+    <h1>Well, hello world!</h1>
     <!-- This is internal JS -->
     <!-- 
     <script>alert('Soon it's lunch time!')</script> --> 
